<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.list.SpeechesListFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="hasData"
            type="boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loading"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="@dimen/dimens0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toTopOf="@id/speeches_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/speeches_list"
            android:layout_width="@dimen/dimens0dp"
            android:layout_height="@dimen/dimens0dp"
            android:clipToPadding="false"
            android:fitsSystemWindows="true"
            android:padding="@dimen/dimens4dp"
            android:visibility="@{hasData ? View.VISIBLE : View.GONE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/adView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loading"
            tools:listitem="@layout/speeches_list_item" />
        <!--        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"-->
        <!--        app:spanCount="2"-->

        <LinearLayout
            android:id="@+id/nodata_container"
            android:layout_width="@dimen/dimens0dp"
            android:layout_height="@dimen/dimens0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/adView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loading"
            tools:visibility="visible">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/empty_garden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_btn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/accentColor"
                android:text="@string/add_data"
                android:textStyle="bold" />
        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens16dp"
            android:visibility="@{hasData ? View.VISIBLE : View.GONE}"
            app:backgroundTint="@color/accentColor"
            app:borderWidth="@dimen/dimens0dp"
            app:layout_constraintBottom_toTopOf="@id/adView"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_create"
            app:tint="@color/white"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/upload_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens16dp"
            android:visibility="@{hasData ? View.VISIBLE : View.GONE}"
            app:backgroundTint="@color/accentColor"
            app:borderWidth="@dimen/dimens0dp"
            app:layout_constraintBottom_toTopOf="@id/add_fab"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_upload"
            app:tint="@color/white"
            tools:visibility="visible" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="@dimen/dimens0dp"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/list_ad_unit_id"
            ads:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>